--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
     <title>Real-Time Chat App</title>
 </head>
 <body>
-    <div id="chat-container">
-        <ul id="messages"></ul>
-        <textarea id="message-input" placeholder="Type your message..."></textarea>
-        <button id="send-button">Send</button>
+    <div class="container">
+        <div id="chat-container">
+            <ul id="messages"></ul>
+            <textarea id="message-input" placeholder="Type your message..."></textarea>
+            <button id="send-button">Send</button>
+        </div>
     </div>
-      
+    
     <script src="index.js" type="module"></script>
 </body>
 </html>
