Now showing messages on screen

--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
 <body>
     <div class="container">
         <div id="chat-container">
-            <ul id="messages"></ul>
-            <textarea id="message-input" placeholder="Type your message..."></textarea>
-            <button id="send-button">Send</button>
+            <div id="messages-container">
+                <ul id="messages"></ul>
+            </div>
+            <div id="input-container">
+                <textarea id="message-input" placeholder="Type your message..."></textarea>
+                <button id="send-button">Send</button>
+            </div>
         </div>
     </div>
     
