I am enabling and disabling the sendBtn based on whether the input field is empty or not. I have made the app so it doesn't allow to send empty data to the database as an extra step of precaution just in case somebody bypasses that disabled button from the dev-tools!

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <ul id="messages"></ul>
             </div>
             <div id="input-container">
+                <!-- <button id="remove-btn">Delete chat</button> -->
                 <textarea id="message-input" placeholder="Type your message..."></textarea>
                 <button id="send-button">Send</button>
             </div>
