--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <!-- Font Awesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Real-Time Chat App</title>
 </head>
 <body>
@@ -18,14 +20,16 @@
             <div id="messages-container">
                 <ul id="messages"></ul>
             </div>
-            <div id="input-container">
-                <button class="remove-btn" id="remove-btn">Clear chat</button>
-                <textarea
+            <div class="input-container" id="input-container">
+                <div class="input-container__elements">
+                    <button class="remove-btn" id="remove-btn">Clear chat</button>
+                    <textarea
                     class="message-input"
                     id="message-input"
                     placeholder="Type your message..."
                     data-gramm="false"></textarea>
-                <button class="send-button disabledBtn" id="send-button">Send</button>
+                    <button class="send-button disabledBtn" id="send-button">Send</button>
+                </div>
             </div>
         </div>
     </div>
