refactored the code a little

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="input-container" id="input-container">
                 <div class="input-container__elements">
-                    <button class="remove-btn" id="remove-btn">Clear chat</button>
+                    <button class="remove-btn" id="remove-btn">Clear Chat</button>
                     <textarea
                     class="message-input"
                     id="message-input"
