Added the button, and implemented the functino

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                     <button class="send-button disabledBtn" id="send-button">Send</button>
                 </div>
             </div>
+            <div>
+                <button class="sign-in-btn" id="sign-in-btn">Sign in With Google</button>
+            </div>
         </div>
     </div>
     
