Finally I am able to sign-in withh Google.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <button class="send-button disabledBtn" id="send-button">Send</button>
                 </div>
             </div>
-            <div>
+            <div class="sign-in-btn-container" id="sign-in-btn-container">
                 <button class="sign-in-btn" id="sign-in-btn">Sign in With Google</button>
             </div>
         </div>
