Implemented signout too, all I have to do now, is create the appropriate pages, and make the app to work seamlesly for every user

--- a/index.html
+++ b/index.html
@@ -31,8 +31,13 @@
                     <button class="send-button disabledBtn" id="send-button">Send</button>
                 </div>
             </div>
+            <!-- I will probably add the sing-in and sig-out buttons dynamically later on based on the page the user is located
+             but for now, this is fine, so that I can test it and learn how to use the sign-in and sign-out functions of Firebase -->
             <div class="sign-in-btn-container" id="sign-in-btn-container">
                 <button class="sign-in-btn" id="sign-in-btn">Sign in With Google</button>
+            </div>
+            <div class="sign-out-btn-container" id="sign-out-btn-container">
+                <button class="sign-out-btn" id="sign-out-btn">Sign out</button>
             </div>
         </div>
     </div>
