Added the skeleton for when the user is signed in or signed out, I think from that piece of code I can create the pages for both signed-in and signed-out respectively

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
                     <textarea
                     class="message-input"
                     id="message-input"
-                    placeholder="Type your message..."
-                    data-gramm="false"></textarea>
+                    placeholder="Type your message..."></textarea>
                     <button class="send-button disabledBtn" id="send-button">Send</button>
                 </div>
             </div>
