What a failed day. I am still NOT able to implement the sign  in and sign out pages correctly. The sign out button is visible but not clickable. Will leave it for now

--- a/index.html
+++ b/index.html
@@ -15,31 +15,38 @@
     <title>Real-Time Chat App</title>
 </head>
 <body>
-    <div class="container">
-        <div id="chat-container">
-            <div id="messages-container">
-                <ul id="messages"></ul>
-            </div>
-            <div class="input-container" id="input-container">
-                <div class="input-container__elements">
-                    <button class="remove-btn" id="remove-btn">Clear Chat</button>
-                    <textarea
-                    class="message-input"
-                    id="message-input"
-                    placeholder="Type your message..."></textarea>
-                    <button class="send-button disabledBtn" id="send-button">Send</button>
+    <div id="auth-container">
+        <h2>Welcome to Chat App</h2>
+        <button id="google-sign-in">Sign In with Google</button>
+    </div>
+    <div id="main-content" style="display: none;">
+        <div class="container">
+            <div id="chat-container">
+                <div id="messages-container">
+                    <ul id="messages"></ul>
                 </div>
-            </div>
-            <!-- I will probably add the sing-in and sig-out buttons dynamically later on based on the page the user is located
-             but for now, this is fine, so that I can test it and learn how to use the sign-in and sign-out functions of Firebase -->
-            <div class="sign-in-btn-container" id="sign-in-btn-container">
-                <button class="sign-in-btn" id="sign-in-btn">Sign in With Google</button>
-            </div>
-            <div class="sign-out-btn-container" id="sign-out-btn-container">
-                <button class="sign-out-btn" id="sign-out-btn">Sign out</button>
+                <div class="input-container" id="input-container">
+                    <div class="input-container__elements">
+                        <button class="remove-btn" id="remove-btn">Clear Chat</button>
+                        <textarea
+                        class="message-input"
+                        id="message-input"
+                        placeholder="Type your message..."></textarea>
+                        <button class="send-button disabledBtn" id="send-button">Send</button>
+                    </div>
+                </div>
+                <!-- I will probably add the sing-in and sig-out buttons dynamically later on based on the page the user is located
+                 but for now, this is fine, so that I can test it and learn how to use the sign-in and sign-out functions of Firebase -->
             </div>
         </div>
     </div>
+    <button class="sign-out-btn" id="sign-out-btn" style="display: none;">Sign out</button>
+    
+    <template id="sign-in-template">
+        <h2>Sign In</h2>
+        <button id="google-sign-in">Sign In with Google</button>
+        <p>Don't have an account? Just click the button above to sign in or create an account with Google.</p>
+    </template>
     
     <script src="index.js" type="module"></script>
 </body>
