Nope, with the help of Cursor, I fixed it. Or should I say, Cursor fixed it for me. Now I am able to sign in and sign out

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
         </div>
     </div>
-    <button class="sign-out-btn" id="sign-out-btn" style="display: none;">Sign out</button>
+    <button id="sign-out-btn" style="position: fixed; top: 10px; right: 10px; z-index: 9999;">Sign Out</button>
     
     <template id="sign-in-template">
         <h2>Sign In</h2>
